@@ -22,6 +22,8 @@
 17. For landscape now-playing text uses more space depending upon cover width.
 18. Fix biography, etc, showing in actions menu for 'Compilations' section.
 19. Only add bottom padding for iOS if running as web-app.
+20. In now-playing (but not desktop bottom bar) show "Performed by " (etc.)
+    prefixes for tracks with geners configured to show these artist types.
 
 3.4.5
 -----
